# socialconnect

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  reproduce_x_issue.py  ruff_errors.txt  test_x_content.py  verify_x.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: ARCHITECTURE.md  EXAMPLES.md  TESTING.md  UTILS.md  WEBHOOKS.md
docs/core/: AUTH.md  BASE_ADAPTER.md  EVENTS.md  EXCEPTIONS.md  FACTORY.md  MIDDLEWARE.md  MODELS.md  REGISTRY.md  RESILIENCE.md
docs/providers/: ARATAI.md  DISCORD.md  SLACK.md  TELEGRAM.md  TWITTER.md  WHATSAPP.md
src/socialconnector/: __init__.py
src/socialconnector/core/: __init__.py  auth.py  base_adapter.py  events.py  exceptions.py  factory.py  middleware.py  models.py  oauth2_pkce.py  paginator.py  registry.py  streaming.py
src/socialconnector/providers/: __init__.py  aratai.py  discord.py  slack.py  telegram.py  whatsapp.py  x.py
src/socialconnector/providers/x/: __init__.py  _account_activity.py  _auth.py  _chat.py  _communities.py  _compliance.py  _connections.py  _dms.py  _general.py  _http.py  _media.py  _news.py  _notes.py  _spaces.py  _stream.py  _tweets.py  _usage.py  _users.py  adapter.py  shared_models.py
src/socialconnector/providers/x/account_activity/: client_functions.py  models.py
src/socialconnector/providers/x/auth/: client_functions.py
src/socialconnector/providers/x/chat/: client_functions.py  models.py
src/socialconnector/providers/x/communities/: client_functions.py  models.py
src/socialconnector/providers/x/compliance/: client_functions.py  models.py
src/socialconnector/providers/x/connections/: client_functions.py  models.py
src/socialconnector/providers/x/dms/: client_functions.py  models.py
src/socialconnector/providers/x/general/: models.py  (+1 more)
src/socialconnector/utils/: config.py  http_client.py  logger.py  rate_limiter.py
src/socialconnector/webhooks/: __init__.py  handlers.py  server.py
tests/: conftest.py
tests/core/: test_events.py  test_infrastructure.py  test_middleware.py  test_models.py  test_registry.py
tests/providers/: test_telegram.py  test_twitter.py  test_x.py  test_x_http_headers.py
(+16 files in other folders)
